[project]
name = "deckboss"
version = "0.1.0"
description = "AI assistant for edge robotics and IoT systems"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
stt = ["openai-whisper"]
tts = ["piper-tts"]
telegram = ["python-telegram-bot>=20.0"]
discord = ["discord.py>=2.3.0"]

[project.scripts]
deckboss = "deckboss.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
